# OOP-Project

./: CMakeLists.txt  Laptop.cpp  Laptop.h  Mouse.cpp  Mouse.h  Object.h  Product.cpp  Product.h  Review.cpp  Review.h  ReviewProject.cpp  ReviewProject.vcxproj  ReviewProject.vcxproj.filters  WirelessMouse.cpp  WirelessMouse.h
x64/Debug/: TemaIA.exe.recipe  TemaIA.ilk  vc143.idb
x64/Debug/TemaIA.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TemaIA.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
